# aoc_2022_python

./: README.md  main.py  pyproject.toml
