[tool.poetry]
name = "aoc-2022-python"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoc_2022_python"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
